--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "jest": "^23.6.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   }
 }
